--- a/app/index2.jade
+++ b/app/index2.jade
@@ -3,11 +3,10 @@ html(lang="zh-tw")
   head
     title ncku graduation 104
     meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1") 
     meta(name="viewport", content="width=device-width, initial-scale=1.0") 
     meta(name="description", content="1")
-    meta(name="keywords", content="lateral, sides, slide, scroll, jquery, css3, timeline")
-    meta(name="author", content="Codrops")
+    meta(name="keywords", content=" ")
+    meta(name="author", content="Mouther")
     link(rel="shortcut icon", href="../favicon.ico") 
     link(rel="stylesheet", type="text/css", href="app.css")
     //- link(href='http://fonts.googleapis.com/css?family=Kelly+Slab', rel='stylesheet', type='text/css')
