--- a/app/index2.jade
+++ b/app/index2.jade
@@ -15,7 +15,7 @@ html(lang="zh-tw")
         
   body
     .ui.secondary.pointing.menu
-      a.active.item#icon_1
+      a.active.red.item#icon_1
         i.home.icon
         | Home
       a.item#icon_2
