menu icon large

--- a/app/index2.jade
+++ b/app/index2.jade
@@ -16,13 +16,13 @@ html(lang="zh-tw")
   body
     .ui.secondary.pointing.menu
       a.active.red.item#icon_1
-        i.home.icon
+        i.home.icon.large
         | Home
       a.item#icon_2
-        i.user.icon
+        i.user.icon.large
         | Members
       a.item#icon_3
-        i.mail.icon 
+        i.mail.icon.large
         | Contact us
     .right.menu
         .item
