page_2 init grid

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -15,11 +15,17 @@ html
 #page_2
   background-color #FFF
   left 100vw
-  height auto
+  height 100vh
   
 #page_3
   background-color #FFF
   left 200vw
   height auto
+
+.grid
+  height 100%
+
+.grid.row
+  height 50%
 
 // vi:et:nowrap:sw=2:ts=2
