--- a/app/index2.jade
+++ b/app/index2.jade
@@ -48,6 +48,23 @@ html(lang="zh-tw")
       .container#page_2
         br
         h1 MEMBER 建構中
+        .ui.seven.column.divided.grid
+          .row
+            .column TESTTTTTTTT
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+          .row
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
+            .column TESTTTTTTTn
       .container#page_3
         br
         h1 CONTACT 建構中
