--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -28,7 +28,9 @@ html
 .grid
   height 100%
 
-.grid.row
+#page_2 .grid .row
   height 50%
+  margin-top 0
+  padding 0 0 0 0
 
 // vi:et:nowrap:sw=2:ts=2
