set page_2 photo init

--- a/app/index2.jade
+++ b/app/index2.jade
@@ -47,24 +47,37 @@ html(lang="zh-tw")
         #ss-container.ss-container
       .container#page_2
         br
-        h1 MEMBER 建構中
+        h1
         .ui.seven.column.divided.grid
           .row
-            .column TESTTTTTTTT
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
+            .column
+            .column 
+              img.ui.image(src="/res/images/profile/1.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/2.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/3.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/4.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/5.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/6.jpg")
           .row
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
-            .column TESTTTTTTTn
+            .column 
+              img.ui.image(src="/res/images/profile/7.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/8.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/9.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/10.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/11.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/12.jpg")
+            .column 
+              img.ui.image(src="/res/images/profile/13.jpg")
       .container#page_3
         br
         h1 CONTACT 建構中
