refine profile images' size & set padding

--- a/app/index2.jade
+++ b/app/index2.jade
@@ -49,7 +49,7 @@ html(lang="zh-tw")
         br
         h1
         .ui.seven.column.divided.grid
-          .row
+          .row#row_1
             .column
             .column 
               img.ui.image(src="/res/images/profile/1.jpg")
@@ -63,7 +63,7 @@ html(lang="zh-tw")
               img.ui.image(src="/res/images/profile/5.jpg")
             .column 
               img.ui.image(src="/res/images/profile/6.jpg")
-          .row
+          .row#row_2
             .column 
               img.ui.image(src="/res/images/profile/7.jpg")
             .column 
