set padding to margin & set images border-radius

--- a/app/index2.jade
+++ b/app/index2.jade
@@ -52,32 +52,32 @@ html(lang="zh-tw")
           .row#row_1
             .column
             .column 
-              img.ui.image(src="/res/images/profile/1.jpg")
+              img.rounded.ui.image(src="/res/images/profile/1.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/2.jpg")
+              img.rounded.ui.image(src="/res/images/profile/2.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/3.jpg")
+              img.rounded.ui.image(src="/res/images/profile/3.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/4.jpg")
+              img.rounded.ui.image(src="/res/images/profile/4.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/5.jpg")
+              img.rounded.ui.image(src="/res/images/profile/5.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/6.jpg")
+              img.rounded.ui.image(src="/res/images/profile/6.jpg")
           .row#row_2
             .column 
-              img.ui.image(src="/res/images/profile/7.jpg")
+              img.rounded.ui.image(src="/res/images/profile/7.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/8.jpg")
+              img.rounded.ui.image(src="/res/images/profile/8.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/9.jpg")
+              img.rounded.ui.image(src="/res/images/profile/9.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/10.jpg")
+              img.rounded.ui.image(src="/res/images/profile/10.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/11.jpg")
+              img.rounded.ui.image(src="/res/images/profile/11.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/12.jpg")
+              img.rounded.ui.image(src="/res/images/profile/12.jpg")
             .column 
-              img.ui.image(src="/res/images/profile/13.jpg")
+              img.rounded.ui.image(src="/res/images/profile/13.jpg")
       .container#page_3
         br
         h1 CONTACT 建構中
