use ihover.min.css instead of bower

--- a/app/index.jade
+++ b/app/index.jade
@@ -51,8 +51,13 @@ html(lang="zh-tw")
         .ui.seven.column.divided.grid
           .row#row_1
             .column
-            .column 
-              img.rounded.ui.image(src="/res/images/profile/1.jpg")
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.rounded.ui.image(src="/res/images/profile/1.jpg")
+                .info
+                  h3 TTTT
+                  p TTTT
             .column 
               img.rounded.ui.image(src="/res/images/profile/2.jpg")
             .column 
