--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -16,7 +16,6 @@ html
   overflow-y visible
 
 #page_2
-  background-color #FFF
   left 100vw
   height 100vh
   
@@ -29,14 +28,18 @@ html
   height 100%
 
 #page_2 .grid .row
-  height 50%
   margin-top 0
   padding 0 0 0 0
 
 img
   display inline
+  box-shadow 0px 0px 9px 0px rgba(20%,20%,40%,0.5)
 
 #row_1 .column img
   margin-top 15%
+  margin-bottom 15%
+  
+#row_2 .column img
+  margin-top 20%
 
 // vi:et:nowrap:sw=2:ts=2
