--- a/app/index.jade
+++ b/app/index.jade
@@ -54,35 +54,35 @@ html(lang="zh-tw")
             .column.ih-item.square.effect6.top_to_bottom 
               a
                 .img
-                  img.rounded.ui.image(src="/res/images/profile/1.jpg")
+                  img.ui.image(src="/res/images/profile/1.jpg")
                 .info
                   h1 TTTT
                   p TTTT
             .column 
-              img.rounded.ui.image(src="/res/images/profile/2.jpg")
+              img.ui.image(src="/res/images/profile/2.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/3.jpg")
+              img.ui.image(src="/res/images/profile/3.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/4.jpg")
+              img.ui.image(src="/res/images/profile/4.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/5.jpg")
+              img.ui.image(src="/res/images/profile/5.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/6.jpg")
+              img.ui.image(src="/res/images/profile/6.jpg")
           .row#row_2
             .column 
-              img.rounded.ui.image(src="/res/images/profile/7.jpg")
+              img.ui.image(src="/res/images/profile/7.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/8.jpg")
+              img.ui.image(src="/res/images/profile/8.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/9.jpg")
+              img.ui.image(src="/res/images/profile/9.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/10.jpg")
+              img.ui.image(src="/res/images/profile/10.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/11.jpg")
+              img.ui.image(src="/res/images/profile/11.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/12.jpg")
+              img.ui.image(src="/res/images/profile/12.jpg")
             .column 
-              img.rounded.ui.image(src="/res/images/profile/13.jpg")
+              img.ui.image(src="/res/images/profile/13.jpg")
       .container#page_3
         br
         h1 CONTACT 建構中
