add fb & gihub icon

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -2,7 +2,7 @@ html
   overflow-x hidden
   max-width 100%
 
-.menu
+.ui.menu
   position fixed
   z-index 99
   width 100vw
@@ -41,5 +41,11 @@ img
   
 #row_2 .column img
   margin-top 20%
+
+#fb
+  right 20%
+
+#github
+  right 5%
 
 // vi:et:nowrap:sw=2:ts=2
