--- a/app/index.jade
+++ b/app/index.jade
@@ -19,17 +19,16 @@ html(lang="zh-tw")
         i.home.icon.large
         | Home
       a.item#icon_2
-        i.user.icon.large
+        i.users.icon.large
         | Members
       a.item#icon_3
         i.mail.icon.large
         | Contact us
-    .right.menu
-        .item
-        //  .ui.icon.input
-            input(type="text",placeholder="Search...")
-            i.search.link.icon
-        //a.ui.item Logout
+      .right.menu
+        a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
+          i.github.alternate.icon.large.link
+        a.item#fb(href="https://www.facebook.com/ncku.graduation" target="_blank")
+          i.facebook.icon.large.link.blue
  
     #book
       .container#page_1
