--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -48,4 +48,12 @@ img
 #github
   right 5%
 
+#mask
+  position absolute
+  z-index 100
+  width 100vw
+  height 100vh
+  background-color #000
+  opacity 0
+
 // vi:et:nowrap:sw=2:ts=2
