--- a/app/index.jade
+++ b/app/index.jade
@@ -56,7 +56,7 @@ html(lang="zh-tw")
                   img.ui.image(src="/res/images/profile/1.jpg")
                 .info
                   h1 TTTT
-                  p TTTT
+                  h3 TTTT
             .column 
               img.ui.image(src="/res/images/profile/2.jpg")
             .column 
@@ -85,6 +85,9 @@ html(lang="zh-tw")
       .container#page_3
         br
         h1 CONTACT 建構中
+
+    //- #mask
+
     //-  
         .ss-row
           .ss-left
