finish page_3 ui

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -1,3 +1,6 @@
+*, h1, h2, h3
+  font-family "微軟正黑體"
+
 html
   overflow-x hidden
   max-width 100%
@@ -20,7 +23,6 @@ html
   height 100vh
   
 #page_3
-  background-color #FFF
   left 200vw
   height auto
 
@@ -34,13 +36,15 @@ html
 img
   display inline
   box-shadow 0px 0px 9px 0px rgba(20%,20%,40%,0.5)
+  width 100%
+  height 100%
 
 #row_1 .column img
-  margin-top 15%
-  margin-bottom 15%
+  margin-top 5%
+  margin-bottom 2.5%
   
 #row_2 .column img
-  margin-top 20%
+  margin-top 2.5%
 
 #fb
   right 20%
@@ -55,5 +59,15 @@ img
   height 100vh
   background-color #000
   opacity 0
+
+#contact
+  width 90vw
+  margin 0 auto
+
+p#contact-sub
+  margin-top 0
+
+label h3 
+  font-size 1.5em
 
 // vi:et:nowrap:sw=2:ts=2
