--- a/app/index.jade
+++ b/app/index.jade
@@ -53,38 +53,115 @@ html(lang="zh-tw")
             .column.ih-item.square.effect6.top_to_bottom 
               a
                 .img
-                  img.ui.image(src="/res/images/profile/1.jpg")
+                  img.ui.image(src="/res/images/profile/2.jpg")
                 .info
-                  h1 TTTT
-                  h3 TTTT
-            .column 
-              img.ui.image(src="/res/images/profile/2.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/3.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/4.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/5.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/6.jpg")
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
           .row#row_2
-            .column 
-              img.ui.image(src="/res/images/profile/7.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/8.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/9.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/10.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/11.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/12.jpg")
-            .column 
-              img.ui.image(src="/res/images/profile/13.jpg")
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+
       .container#page_3
+        br 
         br
-        h1 CONTACT 建構中
+        br
+        br
+        br
+        #contact
+          .ui.attached.message.blue
+            .haeder
+              h2 聯絡我們
+              p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
+          form.ui.form.attached.fluid.segment
+            .two.fields
+              .ui.field.huge.input
+                label 
+                  h3(style="font-weight:bold") 姓名
+                input(placeholder="Name" type="text")
+              .ui.field.huge.input
+                label 
+                  h3(style="font-weight:bold") 系級 
+                input(placeholder="I don't know how to spell" type="text")
+            .ui.field.huge.input
+              label 
+                h3(style="font-weight:bold") 電子信箱
+              input(placeholder="e-mail address" type="text")
+            .ui.field.huge.input
+              label 
+                h3(style="font-weight:bold") Comment
+              textarea
+            .ui.buttons
+              .ui.button Cancel
+              .or
+              .ui.button.positive Reply
 
     //- #mask
 
@@ -131,7 +208,7 @@ html(lang="zh-tw")
           .ss-left
             h3
               span November 22, 2011
-              a TTTTTTTTTTTTTTTTTTT
+              a 我好正 <3我好正 <3我好正 <3我好正 <3TTT
           .ss-right
             a.ss-circle.ss-circle-2 Hover and Click Trigger for Circular Elements with jQuery
    
