--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,15 @@
-h2.ss-subtitle{
-    padding: 10px 10px 40px;
+h2{
+    padding: 10px 10px 10px;
     font-size: 52px;
+    font-family: "微軟正黑體";
+    font-weight: bold;
     text-transform: uppercase;
     color: rgba(0,0,0,0.8);
 	position: relative;
 	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+}
+h2.ss-subtitle{
+  padding: 10px 10px 40px;
 }
 h2.ss-subtitle:before{
 	width: 4px;
