--- a/app/index.jade
+++ b/app/index.jade
@@ -134,7 +134,6 @@ html(lang="zh-tw")
         br
         br
         br
-        br
         #contact
           .ui.attached.message.blue
             .haeder
@@ -142,19 +141,19 @@ html(lang="zh-tw")
               p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
           form.ui.form.attached.fluid.segment
             .two.fields
-              .ui.field.huge.input
+              .ui.field.large.input
                 label 
                   h3(style="font-weight:bold") 姓名
                 input(placeholder="Name" type="text")
-              .ui.field.huge.input
+              .ui.field.large.input
                 label 
                   h3(style="font-weight:bold") 系級 
                 input(placeholder="I don't know how to spell" type="text")
-            .ui.field.huge.input
+            .ui.field.large.input
               label 
                 h3(style="font-weight:bold") 電子信箱
-              input(placeholder="e-mail address" type="text")
-            .ui.field.huge.input
+              input(placeholder="E-mail address" type="text")
+            .ui.field.large.input
               label 
                 h3(style="font-weight:bold") Comment
               textarea
@@ -162,6 +161,7 @@ html(lang="zh-tw")
               .ui.button Cancel
               .or
               .ui.button.positive Reply
+        br      
 
     //- #mask
 
