--- a/app/css/style.css
+++ b/app/css/style.css
@@ -70,10 +70,12 @@ h2.ss-subtitle:after{
 	padding-bottom: 500px;
 }
 .ss-container h2{
-    font-size: 40px;
+    font-size: 80px;
+    font-weight: normal;
+    font-family: "Century Gothic";
     text-transform: uppercase;
-    color: rgba(78,84,123,0.2);
-	text-shadow: 0px 1px 1px #fff;
+    color: rgba(200,0,0,0.9);
+	text-shadow: 0px 0px 3px #000;
 	padding: 20px 0px;
 }
 .ss-container:before{
