set menu opacity

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -5,10 +5,11 @@ html
   overflow-x hidden
   max-width 100%
 
-.ui.menu
+.ui.menu.secondary.pointing
   position fixed
   z-index 99
   width 100vw
+  background-color rgba(255, 255, 255, 0.6)
 
 #book
   position relative
