set profile table cell -> 7 + 6

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -43,9 +43,22 @@ img
 #row_1 .column img
   margin-top 5%
   margin-bottom 2.5%
+
+#row_1 .column
+  padding 10px
   
 #row_2 .column img
   margin-top 2.5%
+  
+#row_2 .column
+  width 10%
+  display table-cell
+  padding 10px
+
+#row_2
+  display table
+  width 85%
+  margin 0 auto 
 
 #fb
   right 20%
@@ -70,5 +83,8 @@ p#contact-sub
 
 label h3 
   font-size 1.5em
+
+.column.ih-item.square.effect6
+  padding 0
 
 // vi:et:nowrap:sw=2:ts=2
