--- a/app/index.jade
+++ b/app/index.jade
@@ -49,7 +49,6 @@ html(lang="zh-tw")
         h1
         .ui.seven.column.divided.grid
           .row#row_1
-            .column
             .column.ih-item.square.effect6.top_to_bottom 
               a
                 .img
@@ -85,7 +84,21 @@ html(lang="zh-tw")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-          .row#row_2
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+            .column.ih-item.square.effect6.top_to_bottom 
+              a
+                .img
+                  img.ui.image(src="/res/images/profile/2.jpg")
+                .info
+                  h1 我好正 <3
+                  h3 我好正 <3
+          #row_2
             .column.ih-item.square.effect6.top_to_bottom 
               a
                 .img
