--- a/app/index.jade
+++ b/app/index.jade
@@ -49,49 +49,49 @@ html(lang="zh-tw")
         h1
         .ui.seven.column.divided.grid
           .row#row_1
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col1 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col3
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col5  
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col7 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col9 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col11 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col13 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
@@ -99,42 +99,42 @@ html(lang="zh-tw")
                   h1 我好正 <3
                   h3 我好正 <3
           #row_2
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col2 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col4 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col6 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col8 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col10 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom 
+            .column.ih-item.square.effect6.top_to_bottom#col12 
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
