profile detail prototype

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -56,10 +56,20 @@ img
   display table-cell
   padding 10px
 
+#row_1
+  bottom 45vh
+
+#row_2
+  top 55vh
+
 #row_2
   display table
   width 85%
-  margin 0 auto 
+  bottom 0px
+  left 7.5%
+
+#row_1, #row_2
+  position absolute
 
 #fb
   right 20%
@@ -87,5 +97,17 @@ label h3
 
 .column.ih-item.square.effect6
   padding 0
+
+#info
+  background-color red
+  position absolute
+  width 100vw
+  top 50%
+  z-index 98
+
+#info img
+  width auto
+  
+
 
 // vi:et:nowrap:sw=2:ts=2
