--- a/app/index.jade
+++ b/app/index.jade
@@ -47,6 +47,7 @@ html(lang="zh-tw")
       .container#page_2
         br
         h1
+        #info
         .ui.seven.column.divided.grid
           .row#row_1
             .column.ih-item.square.effect6.top_to_bottom#col1 
