--- a/app/index.jade
+++ b/app/index.jade
@@ -14,24 +14,31 @@ html(lang="zh-tw")
     //- script(type="text/javascript", src="js/modernizr.custom.11333.js")
         
   body
-    .ui.secondary.pointing.menu
-      a.active.red.item#icon_1
-        i.home.icon.large
-        | Home
-      a.item#icon_2
-        i.users.icon.large
-        | Members
-      a.item#icon_3
-        i.mail.icon.large
-        | Contact us
-      .right.menu
-        a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
-          i.github.alternate.icon.large.link
-        a.item#fb(href="https://www.facebook.com/ncku.graduation" target="_blank")
-          i.facebook.icon.large.link.blue
+    #menu
+      #logo
+        img(src="/res/images/LOGO-top.png")
+      .ui.secondary.pointing.menu
+        a.active.red.item#icon_1
+          i.home.icon.big
+          | Home
+        a.item#icon_2
+          i.users.icon.big
+          | Members
+        a.item#icon_3
+          i.mail.icon.big
+          | Contact us
+        .right.menu
+          a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
+            i.github.alternate.icon.large.link
+          a.item#fb(href="https://www.facebook.com/ncku.graduation" target="_blank")
+            i.facebook.icon.large.link.blue
  
     #book
       .container#page_1
+        br
+        br
+        br
+        br
         br
         h1 NCKU graduation
         h2.ss-subtitle Programmmmmmmmmmmmmmmmmmmmmmm
@@ -50,49 +57,49 @@ html(lang="zh-tw")
         #info
         .ui.seven.column.divided.grid
           .row#row_1
-            .column.ih-item.square.effect6.top_to_bottom#col1 
+            .column.ih-item.square.effect6.bottom_to_top#col1 
               a
                 .img
                   img.ui.image(src="/res/images/profile/1.jpg")
                 .info
-                  h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col3
+                  h1 我好正 <3
+            .column.ih-item.square.effect6.bottom_to_top#col3
               a
                 .img
                   img.ui.image(src="/res/images/profile/2.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col5  
+            .column.ih-item.square.effect6.bottom_to_top#col5  
               a
                 .img
                   img.ui.image(src="/res/images/profile/3.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col7 
+            .column.ih-item.square.effect6.bottom_to_top#col7 
               a
                 .img
                   img.ui.image(src="/res/images/profile/4.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col9 
+            .column.ih-item.square.effect6.bottom_to_top#col9 
               a
                 .img
                   img.ui.image(src="/res/images/profile/5.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col11 
+            .column.ih-item.square.effect6.bottom_to_top#col11 
               a
                 .img
                   img.ui.image(src="/res/images/profile/6.jpg")
                 .info
                   h1 我好正 <3
                   h3 我好正 <3
-            .column.ih-item.square.effect6.top_to_bottom#col13 
+            .column.ih-item.square.effect6.bottom_to_top#col13 
               a
                 .img
                   img.ui.image(src="/res/images/profile/7.jpg")
@@ -145,6 +152,9 @@ html(lang="zh-tw")
 
       .container#page_3
         br 
+        br
+        br
+        br
         br
         br
         br
