reply comment textarea(height:auto)

--- a/app/index.jade
+++ b/app/index.jade
@@ -180,7 +180,7 @@ html(lang="zh-tw")
             .ui.field.large.input
               label 
                 h3(style="font-weight:bold") Comment
-              textarea
+              textarea(style="height:auto")
             .ui.buttons
               .ui.button Cancel
               .or
