change logo & 'Department'

--- a/app/index.jade
+++ b/app/index.jade
@@ -172,7 +172,7 @@ html(lang="zh-tw")
               .ui.field.large.input
                 label 
                   h3(style="font-weight:bold") 系級 
-                input(placeholder="I don't know how to spell" type="text")
+                input(placeholder="Department" type="text")
             .ui.field.large.input
               label 
                 h3(style="font-weight:bold") 電子信箱
