--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -126,6 +126,8 @@ label h3
 #info img
   width auto
 
+.loading
+  background transparent url(../res/images/loader-mini.gif) no-repeat 50% 50% !important
   
 
 
