page_1 new color

--- a/app/index.jade
+++ b/app/index.jade
@@ -40,8 +40,8 @@ html(lang="zh-tw")
         br
         br
         br
-        h1 NCKU graduation
-        h2.ss-subtitle Programmmmmmmmmmmmmmmmmmmmmmm
+        // h1 NCKU graduation
+        // h2.ss-subtitle Programmmmmmmmmmmmmmmmmmmmmmm
         #ss-links.ss-links
           a(href="#november") Nov
           a(href="#october") Oct
@@ -152,7 +152,6 @@ html(lang="zh-tw")
 
       .container#page_3
         br 
-        br
         br
         br
         br
