--- a/app/css/style.css
+++ b/app/css/style.css
@@ -11,38 +11,17 @@ h2{
 h2.ss-subtitle{
   padding: 10px 10px 40px;
 }
-h2.ss-subtitle:before{
-	width: 4px;
-	height: 40px;
-	background: rgba(17,17,22,0.8);
-	content: '';
-	position: absolute;
-	right: 75%;
-	margin-right: -4px;
-	bottom: -4px;
-	-moz-border-radius: 2px 2px 0px 0px;
-	-webkit-border-radius: 2px 2px 0px 0px;
-	border-radius: 2px 2px 0px 0px;
-}
-h2.ss-subtitle:after{
-	width: 25%;
-	height: 0px;
-	border-bottom: 4px dotted rgba(17,17,22,0.8);
-	content: '';
-	position: absolute;
-	right: 50%;
-	margin-right: -1px;
-	bottom: -4px;
-}
+
 .ss-links{
 	position: fixed;
-	left: 10px;
+  margin-left: -20px;
+  left: 50%;
 	top: 40%;
-	width: 25%;
+	width: 40px;
 	z-index: 100;
 }
 .ss-links a{
-	background: rgba(0,0,0,0.2);
+	background: rgba(248,182,45,0.6);
 	font-size: 16px;
 	width: 40px;
 	height: 40px;
@@ -59,7 +38,7 @@ h2.ss-subtitle:after{
 	transition: background 0.2s linear;
 }
 .ss-links a:hover{
-	background: rgba(0,0,0,0.4);
+	background: rgba(195,13,35,0.7);
 }
 .ss-container{
     width: 100%;
@@ -79,12 +58,12 @@ h2.ss-subtitle:after{
 	padding: 20px 0px;
 }
 .ss-container:before{
-    position: absolute;
+    position: fixed;
     width: 4px;
-    background: rgba(17,17,22,0.8);
-    top: 0px;
+    background: #9FA0A0;
+    top: 70px;
     left: 50%;
-	margin-left: -2px;
+	margin-left: 2px;
     content: '';
     height: 100%;
 }
@@ -116,13 +95,13 @@ h2.ss-subtitle:after{
     text-align: left;
     -webkit-box-shadow: 
 		0px 2px 5px rgba(0,0,0,0.7) inset, 
-		0px 0px 0px 12px rgba(61,64,85,0.3);
+		0px 0px 0px 12px rgba(248,182,45,0.8);
     -moz-box-shadow: 
 		0px 2px 5px rgba(0,0,0,0.7) inset, 
-		0px 0px 0px 12px rgba(61,64,85,0.3);
+		0px 0px 0px 12px rgba(248,182,45,0.8);
     box-shadow: 
 		0px 2px 5px rgba(0,0,0,0.7) inset, 
-		0px 0px 0px 12px rgba(61,64,85,0.3);
+		0px 0px 0px 12px rgba(248,182,45,0.8);
 	background-size: cover;
 	background-color: #f0f0f0;
 	background-repeat: no-repeat;
@@ -145,7 +124,7 @@ h2.ss-subtitle:after{
 	width: 29%;
 	height: 0px;
 	border-bottom: 5px dotted #ddd;
-	border-bottom: 5px dotted rgba(17, 17, 22, 0.3);
+	border-bottom: 5px dotted rgba(248, 182, 45, 0.8);
 	-webkit-box-shadow: 0px 1px 1px #fff;
 	-moz-box-shadow: 0px 1px 1px #fff;
 	box-shadow: 0px 1px 1px #fff;
