new profile init

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -13,6 +13,7 @@ html
 
 #menu .ui.secondary.pointing.menu
   width 100%
+  min-width 836px
   position absolute
   display inline
   
@@ -21,11 +22,11 @@ html
 
 #logo img
   height auto
-  width 20rem
+  width 15rem
   box-shadow 0px 0px
 
 #menu .right.menu
-  margin-right 20rem
+  margin-right 17rem
 
 #book
   position relative
@@ -51,6 +52,16 @@ html
   margin-top 0
   padding 0 0 0 0
 
+#sideinfo
+  position absolute
+  background-color red
+  height auto
+  top 50%
+  margin-top -16vw
+  width 24vw
+  z-index 101
+  margin-left 0.5%
+
 .info h1
   bottom 0px
 
@@ -61,19 +72,16 @@ img
   height 100%
 
 #row_1 .column img
-  margin-top 5%
-  margin-bottom 2.5%
+  margin-top 0%
 
 #row_1 .column
-  padding 15px
+  padding 3px
   
 #row_2 .column img
-  margin-top 2.5%
+  margin-bottom 0%
   
 #row_2 .column
-  width 10%
-  display table-cell
-  padding 15px
+  padding 3px
 
 #row_1
   bottom 45vh
@@ -83,12 +91,24 @@ img
 
 #row_2
   display table
-  width 85%
   bottom 0px
-  left 7.5%
 
 #row_1, #row_2
   position absolute
+
+.name
+  position relative 
+  width 100%
+  height auto
+  text-align center
+
+.name-top
+  border-bottom #0000FF 5px solid
+  padding-bottom 5px
+
+.name-bottom
+  border-top #0000FF 5px solid
+  padding-top 5px
 
 #fb
   right 20%
