--- a/app/index.jade
+++ b/app/index.jade
@@ -19,13 +19,13 @@ html(lang="zh-tw")
         img(src="/res/images/LOGO-top.png")
       .ui.secondary.pointing.menu
         a.active.red.item#icon_1
-          i.home.icon.big
+          i.home.icon.large
           | Home
         a.item#icon_2
-          i.users.icon.big
+          i.users.icon.large
           | Members
         a.item#icon_3
-          i.mail.icon.big
+          i.mail.icon.large
           | Contact us
         .right.menu
           a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
@@ -52,103 +52,55 @@ html(lang="zh-tw")
   
         #ss-container.ss-container
       .container#page_2
-        br
-        h1
         #info
-        .ui.seven.column.divided.grid
+        .ui.eight.column.divided.grid
+          #sideinfo
+            .img
+              img.ui.image(src="/res/images/profile/2.jpg")
           .row#row_1
-            .column.ih-item.square.effect6.bottom_to_top#col1 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/1.jpg")
-                .info
-                  h3 我好正 <3
-                  h1 我好正 <3
-            .column.ih-item.square.effect6.bottom_to_top#col3
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+            .column.ih-item.square
+            .column.ih-item.square
+            .column.ih-item.square#col3
+              .name.name-top PIGGY
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
             .column.ih-item.square.effect6.bottom_to_top#col5  
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/3.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/3.jpg")
             .column.ih-item.square.effect6.bottom_to_top#col7 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/4.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/4.jpg")
             .column.ih-item.square.effect6.bottom_to_top#col9 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/5.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/5.jpg")
             .column.ih-item.square.effect6.bottom_to_top#col11 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/6.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/6.jpg")
             .column.ih-item.square.effect6.bottom_to_top#col13 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/7.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
-          #row_2
+              .img
+                img.ui.image(src="/res/images/profile/7.jpg")
+          .row#row_2
+            .column.ih-item.square
+            .column.ih-item.square
             .column.ih-item.square.effect6.top_to_bottom#col2 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
+              .name.name-bottom PIGGY
             .column.ih-item.square.effect6.top_to_bottom#col4 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
             .column.ih-item.square.effect6.top_to_bottom#col6 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
             .column.ih-item.square.effect6.top_to_bottom#col8 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
             .column.ih-item.square.effect6.top_to_bottom#col10 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
             .column.ih-item.square.effect6.top_to_bottom#col12 
-              a
-                .img
-                  img.ui.image(src="/res/images/profile/2.jpg")
-                .info
-                  h1 我好正 <3
-                  h3 我好正 <3
+              .img
+                img.ui.image(src="/res/images/profile/2.jpg")
 
       .container#page_3
         br 
